fix box animation error

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #cf4547;
+	background-color: #000;
 	color: #fff;
 	font: 100%/1.5 'Source Sans Pro', sans-serif;
 }
